--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>42.3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.svenkubiak</groupId>
+            <artifactId>jBCrypt</artifactId>
+            <version>0.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
